# music-player

./: README.md  e.txt  index.html  package.json
src/: main.ts  styles.css  util.ts  window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_player.rs  lib.rs  util.rs
