[package]
name = "music-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "music_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rodio = { version = "0.20.1", features = ["symphonia-all"] }
tokio-macros = "2.5.0"
thiserror = "2.0.11"
tauri-plugin-dialog = "2"
souvlaki = "0.8.0"
raw-window-handle = "0.5.0"
lofty="0.22.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = [
  "Foundation",
  "Media",
  "Win32_Foundation",
  "Win32_System_WinRT",
  "Storage_Streams",
]

[target.'cfg(target_os = "windows")'.dev-dependencies.windows]
version = "0.44"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
]
